implemented test user flow
