# apps/server/internal/dto/auth.dto.go
@@ -30,3 +30,13 @@ type PasswordResetDto struct {
 	NewPassword     string `json:"newPassword" binding:"required,min=6" message:"password with minimum 6 characters is required"`
 	ConfirmPassword string `json:"confirmPassword" binding:"required,min=6,eqfield=NewPassword" message:"passwords do not match"`
 }
+
+type TempUserPayload struct {
+	Name string `json:"name" binding:"required,min=2" message:"full name with minimum 2 characters is required"`
+}
+
+type TempUserResponse struct {
+	AccessToken string `json:"accessToken"`
+	RefreshToken string `json:"refreshToken"`
+	User User `json:"user"`
+}
